; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb4/extr_cm.c_async_event.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/infiniband/hw/cxgb4/extr_cm.c_async_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c4iw_dev = type { i32 }
%struct.sk_buff = type { i32 }
%struct.cpl_fw6_msg = type { i32* }
%struct.t4_cqe = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.c4iw_dev*, %struct.sk_buff*)* @async_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @async_event(%struct.c4iw_dev* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca %struct.c4iw_dev*, align 8
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.cpl_fw6_msg*, align 8
  store %struct.c4iw_dev* %0, %struct.c4iw_dev** %3, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %4, align 8
  %6 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %7 = call %struct.cpl_fw6_msg* @cplhdr(%struct.sk_buff* %6)
  store %struct.cpl_fw6_msg* %7, %struct.cpl_fw6_msg** %5, align 8
  %8 = load %struct.c4iw_dev*, %struct.c4iw_dev** %3, align 8
  %9 = load %struct.cpl_fw6_msg*, %struct.cpl_fw6_msg** %5, align 8
  %10 = getelementptr inbounds %struct.cpl_fw6_msg, %struct.cpl_fw6_msg* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 0
  %13 = bitcast i32* %12 to %struct.t4_cqe*
  %14 = call i32 @c4iw_ev_dispatch(%struct.c4iw_dev* %8, %struct.t4_cqe* %13)
  ret i32 0
}

declare dso_local %struct.cpl_fw6_msg* @cplhdr(%struct.sk_buff*) #1

declare dso_local i32 @c4iw_ev_dispatch(%struct.c4iw_dev*, %struct.t4_cqe*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
